[package]
name = "tomatrix"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Make any text document output a matrix screensaver"
repository = "https://github.com/erikh/tomatrix"
homepage = "https://github.com/erikh/tomatrix"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "^1"
crossterm = "^0.27"
rand = "^0.8"
lazy_static = "^1"
signal-hook = "^0.3"
